--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,7 +21,7 @@
         android:fitsSystemWindows="true">
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"/>
+            android:layout_height="match_parent">
 
             <include layout="@layout/nav_header_main"
                 android:id="@+id/nav_drawer_header_include"/>
@@ -31,9 +31,10 @@
                 android:layout_below="@id/nav_drawer_header_include"
                 android:id ="@+id/channel_list">
 
-
-
             </ListView>
+
+        </RelativeLayout>
+
     </com.google.android.material.navigation.NavigationView>
 
 </androidx.drawerlayout.widget.DrawerLayout>
