--- a/app/src/main/res/layout/activity_create_user.xml
+++ b/app/src/main/res/layout/activity_create_user.xml
@@ -10,7 +10,7 @@
         android:id="@+id/createUserNameText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="32dp"
+        android:layout_marginBottom="40dp"
         android:ems="10"
         android:hint="user name"
         android:inputType="textPersonName"
@@ -22,30 +22,30 @@
         android:id="@+id/createEmailText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="120dp"
+        android:layout_marginBottom="44dp"
         android:ems="10"
         android:hint="@string/email"
         android:inputType="textPersonName"
+        app:layout_constraintBottom_toTopOf="@+id/createPasswordText"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="44dp"
+        android:layout_marginBottom="64dp"
         android:text="pulse pa generar fotito"
         app:layout_constraintBottom_toTopOf="@+id/createAvatarImagenView"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/createUserBtn"
         android:layout_width="363dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="40dp"
+        android:layout_marginBottom="32dp"
         android:onClick="createUserClicked"
         android:text="crear usuario"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -56,7 +56,7 @@
         android:id="@+id/backgroundColorBtn"
         android:layout_width="347dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="120dp"
+        android:layout_marginBottom="32dp"
         android:onClick="generateColorClicked"
         android:text="generar background color"
         app:layout_constraintBottom_toTopOf="@+id/createUserBtn"
@@ -67,10 +67,11 @@
         android:id="@+id/createAvatarImagenView"
         android:layout_width="130dp"
         android:layout_height="93dp"
-        android:layout_marginBottom="56dp"
+        android:layout_marginBottom="84dp"
         android:onClick="generateUserAvatar"
         app:layout_constraintBottom_toTopOf="@+id/backgroundColorBtn"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/profiledefault" />
 
@@ -78,12 +79,11 @@
         android:id="@+id/createPasswordText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="44dp"
         android:ems="10"
         android:hint="password"
         android:inputType="textPassword"
         app:layout_constraintBottom_toTopOf="@+id/textView2"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/createEmailText" />
+        app:layout_constraintStart_toStartOf="parent" />
 </androidx.constraintlayout.widget.ConstraintLayout>
