--- a/app/src/main/res/layout/activity_create_user.xml
+++ b/app/src/main/res/layout/activity_create_user.xml
@@ -10,7 +10,7 @@
         android:id="@+id/createUserNameText"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="76dp"
+        android:layout_marginTop="16dp"
         android:ems="10"
         android:hint="user name"
         android:inputType="textPersonName"
@@ -22,7 +22,7 @@
         android:id="@+id/createAvatarImagenView"
         android:layout_width="130dp"
         android:layout_height="93dp"
-        android:layout_marginBottom="4dp"
+        android:layout_marginBottom="8dp"
         android:onClick="generateUserAvatar"
         app:layout_constraintBottom_toTopOf="@+id/backgroundColorBtn"
         app:layout_constraintEnd_toEndOf="@+id/textView2"
@@ -33,7 +33,7 @@
         android:id="@+id/createUserBtn"
         android:layout_width="363dp"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="204dp"
+        android:layout_marginBottom="16dp"
         android:onClick="createUserClicked"
         android:text="crear usuario"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -58,14 +58,12 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="8dp"
+        android:layout_marginBottom="28dp"
         android:text="pulse pa generar fotito"
         app:layout_constraintBottom_toTopOf="@+id/createAvatarImagenView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/createAvatarImagenView"
-        app:layout_constraintVertical_bias="0.991" />
+        app:layout_constraintStart_toStartOf="parent" />
 
     <Button
         android:id="@+id/backgroundColorBtn"
@@ -89,5 +87,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/createUserNameText" />
+
+    <ProgressBar
+        android:id="@+id/createSpinner"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
+        app:layout_constraintStart_toStartOf="parent"
+        tools:layout_editor_absoluteY="293dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
